--- a/.tmux.conf
+++ b/.tmux.conf
@@ -15,9 +15,9 @@ set-option -g prefix C-a
 unbind-key C-b
 bind-key C-a send-prefix
 unbind '"'
-bind - splitw -v
+bind - splitw -v -c "#{pane_current_path}"
 unbind %
-bind | splitw -h
+bind | splitw -h -c "#{pane_current_path}"
 bind k selectp -U
 bind j selectp -D
 bind h selectp -L
@@ -30,7 +30,7 @@ bind r source-file ~/.tmux.conf \; display "Configuration Reloaded!"
 bind -n 'F11' prev
 bind -n 'F12' next
 bind -n 'F8' kill-window
-bind -n 'F9' neww
+bind -n 'F9' neww -c "#{pane_current_path}"
 
 set -g status-bg black
 set -g status-fg yellow
